--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,2 @@
-export PATH=/Applications/TeX/TeXShop.app/Contents/Resources/TeXShop/bin:$PATH
+export PATH=/usr/local/texlive/2013/bin/universal-darwin/:$PATH
 
